support minimum java 8 language level